# ImageToAscii

./: CMakeLists.txt  bld  hessen  waka
lib/: lodepng.h
src/: main.cpp
